--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       body {
         margin: 0;
         padding: 0;
-        background-image: url("https://i.pinimg.com/736x/91/a5/f2/91a5f23267ce48737ce0c7f2cc568eb1.jpg");
+        background-image: url("https://i.pinimg.com/736x/6b/54/b4/6b54b4d20be07ad860df0cf8c55a11ff.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        font-family: Allura, cursive;
-        color: white;
+        font-family: "Edwardian Script ITC", cursive;
+        color: black;
         text-align: center; 
       } 
        </style>
