--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        font-family: "Edwardian Script ITC", cursive;
+        font-family: "Times New Roman", cursive;
         color: black;
-        text-align: center; 
+        text-align: left; 
       } 
        </style>
   </head>
   <body> 
-    <h1> I love you</h1>
+    <h1> Welocme my fellow kitten.</h1>
   </body>
  </html>
