--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>I love you<3</title>
+    <title>I love you <3</title>
 
     <style> 
-   
       body {
         margin: 0;
         padding: 0;
@@ -14,13 +14,32 @@
         background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        font-family: "Times New Roman", cursive;
+        font-family: "Allura", cursive;
         color: black;
         text-align: left; 
-      } 
-       </style>
+      }
+
+      .download-btn {
+        display: inline-block;
+        background-color: lightpink;
+        color: white;
+        padding: 12px 25px;
+        border-radius: 25px;
+        font-size: 1.2rem;
+        transition: all 0.3s ease;
+        margin-top: 20px;
+        text-decoration: none;
+      }
+
+      .download-btn:hover {
+        background-color: #ff69b4;
+        transform: scale(1.05);
+      }
+    </style>
   </head>
+
   <body> 
-    <h1> Welocme my fellow kitten.</h1>
+    <h1>Welcome my fellow kitten.</h1>
+    <a href="your-link-here" class="download-btn">Download</a>
   </body>
- </html>
+</html>
