--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background-attachment: fixed;
         font-family: "Allura", cursive;
         color: black;
-        text-align: left; 
+        text-align: center; 
       }
 
       .download-btn {
@@ -40,6 +40,6 @@
 
   <body> 
     <h1>Welcome my fellow kitten.</h1>
-    <a href="your-link-here" class="download-btn">Download</a>
+    <a href="your-link-here" class="download-btn">Next page</a>
   </body>
 </html>
