--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         transition: all 0.3s ease;
         margin-top: 20px;
         text-decoration: none;
+        text-align: bottom right; 
       }
 
       .download-btn:hover {
