--- a/index.html
+++ b/index.html
@@ -1,46 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>I love you <3</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>I love you <3 - Clicker Game</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
 
-    <style> 
-      body {
-        margin: 0;
-        padding: 0;
-        background-image: url("https://i.pinimg.com/736x/6b/54/b4/6b54b4d20be07ad860df0cf8c55a11ff.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        font-family: "Allura", cursive;
-        color: black;
-        text-align: center; 
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url("https://i.pinimg.com/736x/6b/54/b4/6b54b4d20be07ad860df0cf8c55a11ff.jpg");
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      font-family: 'Allura', cursive;
+      color: black;
+      text-align: center;
+      overflow-x: hidden;
+    }
+
+    h1 {
+      margin-top: 30px;
+      font-size: 3rem;
+      color: pink;
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    #game-container {
+      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #clicker-btn {
+      background-color: lightpink;
+      color: white;
+      padding: 20px 40px;
+      font-size: 1.5rem;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      box-shadow: 2px 2px 6px #00000050;
+      transition: all 0.2s ease;
+    }
+
+    #clicker-btn:hover {
+      background-color: #ff69b4;
+      transform: scale(1.05);
+    }
+
+    #counter {
+      margin-top: 20px;
+      font-size: 2rem;
+      color: #ff1493;
+      text-shadow: 1px 1px 2px #00000050;
+    }
+
+    #kitten {
+      margin-top: 30px;
+      display: none;
+      width: 200px;
+      border-radius: 15px;
+      box-shadow: 3px 3px 10px #00000080;
+    }
+
+    .download-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: inline-block;
+      background-color: lightpink;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 25px;
+      font-size: 1.2rem;
+      transition: all 0.3s ease;
+      text-decoration: none;
+    }
+
+    .download-btn:hover {
+      background-color: #ff69b4;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+
+  <h1>Welcome my fellow kitten.</h1>
+
+  <div id="game-container">
+    <button id="clicker-btn">Click me!</button>
+    <div id="counter">Hearts: 0 / 20</div>
+    <img id="kitten" src="https://i.pinimg.com/736x/1f/fe/6e/1ffe6e69f3e9ef76e5f5efc5a7f3918c.jpg" alt="Cute Pink Kitten">
+  </div>
+
+  <a href="your-link-here" class="download-btn">Next page</a>
+
+  <script>
+    let count = 0;
+    const goal = 20; // number of clicks to win kitten
+    const counter = document.getElementById('counter');
+    const kitten = document.getElementById('kitten');
+    const clickerBtn = document.getElementById('clicker-btn');
+
+    clickerBtn.addEventListener('click', () => {
+      if (count < goal) {
+        count++;
+        counter.textContent = `Hearts: ${count} / ${goal}`;
       }
-
-      .download-btn {
-        display: inline-block;
-        background-color: lightpink;
-        color: white;
-        padding: 12px 25px;
-        border-radius: 25px;
-        font-size: 1.2rem;
-        transition: all 0.3s ease;
-        margin-top: 20px;
-        text-decoration: none;
-        text-align: bottom right; 
+      if (count === goal) {
+        kitten.style.display = 'block';
+        counter.textContent = `You unlocked your cute pink kitten! 😻`;
+        clickerBtn.disabled = true;
+        clickerBtn.style.opacity = 0.5;
+        clickerBtn.style.cursor = 'default';
       }
+    });
+  </script>
 
-      .download-btn:hover {
-        background-color: #ff69b4;
-        transform: scale(1.05);
-      }
-    </style>
-  </head>
-
-  <body> 
-    <h1>Welcome my fellow kitten.</h1>
-    <a href="your-link-here" class="download-btn">Next page</a>
-  </body>
+</body>
 </html>
