--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Slope Game - I love you <3</title>
-<style>
+<title>Something cute</title>
+
+  <style>
   body {
     margin: 0;
     padding: 0;
